--- a/src/app/appointment/components/questions/question-form/question-form.component.html
+++ b/src/app/appointment/components/questions/question-form/question-form.component.html
@@ -4,7 +4,7 @@
   <mat-card-content>
     <form [formGroup]="formGroup">
       <div fxLayout.xs="column" fxLayout.lg="row" fxLayoutGap="20px">
-        <div fxFlex.lg="70">
+        <div fxFlex.lg="50">
           <mat-form-field>
             <input matInput #title formControlName="question" [maxLength]="200" required type="text"
               [placeholder]="'question.form.question' | translate" autocomplete="off" />
@@ -20,6 +20,15 @@
                 {{ type.description }}
               </mat-option>
             </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div fxFlex.lg="20">
+          <mat-form-field>
+            <input matInput #title formControlName="order" [maxLength]="200" required type="text"
+              [placeholder]="'question.form.order' | translate" autocomplete="off" />
+            <mat-error *ngIf="formGroup.hasError('required',['order'])">{{ 'form.validation.required' | translate }}
+            </mat-error>
           </mat-form-field>
         </div>
       </div>
