--- a/src/app/survey/components/dynamic-form-question/dynamic-form-question.component.scss
+++ b/src/app/survey/components/dynamic-form-question/dynamic-form-question.component.scss
@@ -10,3 +10,16 @@ mat-radio-button {
     margin-right: 15px;
     margin-bottom: 20px;
 }
+
+.checkbox {
+
+    span {
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    mat-checkbox {
+        padding-right: 40px;
+    }
+
+ }
