--- a/src/styles.scss
+++ b/src/styles.scss
@@ -135,6 +135,10 @@ app-title {
   
 }
 
+.mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+  background-color: #3f51b5 !important;
+}
+
 .mat-radio-inner-circle {
   background-color: #3f51b5 !important;
 }
