--- a/src/app/appointment/components/appointment/appointment.component.html
+++ b/src/app/appointment/components/appointment/appointment.component.html
@@ -22,3 +22,8 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
+<div *ngIf="showRecentAppointments">
+  <app-appointment-recent>
+  </app-appointment-recent>
+</div>
