--- a/src/app/appointment/components/appointment/recent/appointment-recent.component.html
+++ b/src/app/appointment/components/appointment/recent/appointment-recent.component.html
@@ -1,14 +1,17 @@
 <h3>Last Appointments</h3>
 
-<div fxLayout="row wrap" fxLayout.xs="column" fxLayout.sm="column" *ngIf="appointments;else templateName">
+<div fxLayout="row wrap" fxLayout.xs="column" fxLayout.sm="column" *ngIf="appointments;else no_appointments">
 
 
   <mat-card fxFlex.xl="calc(33%-20px)" fxFlex.lg="calc(33%-20px)" fxFlex.md="calc(50%-20px)"
     *ngFor="let appointment of appointments">
     <mat-card-header>
       <mat-card-title>{{appointment.description}}</mat-card-title>
-      <mat-card-subtitle>Date {{ appointment.date | date:'short' }}</mat-card-subtitle>
+      <mat-card-subtitle>{{ appointment.date | date:'short' }}</mat-card-subtitle>
     </mat-card-header>
+    <mat-card-content>
+      <p>Patient {{appointment.patient?.name}}</p> 
+    </mat-card-content>
     <mat-card-actions>
       <button (click)="detail(appointment)" class="button-card-float" mat-button>Detail</button>
     </mat-card-actions>
